[package]
edition = "2021"
name = "rust-stm32-blink"
version = "0.1.0"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
cortex-m-semihosting = "0.3"
embedded-hal = "0.2"
nb = "1"
panic-halt = "0.2"

[dependencies.stm32f4]
features = ["stm32f401", "rt"]
version = "0.14.0"

[dependencies.stm32f4xx-hal]
features = ["stm32f401", "rt"]
version = "0.11"
